fix: increase collapse toggle z-index and fix icon path issues

--- a/css/main.scss
+++ b/css/main.scss
@@ -195,7 +195,7 @@ a {
     justify-content: center;
     align-items: center;
     position: absolute;
-    z-index: 10;
+    z-index: 100;
     top: 6px;
     right: 6px;
     height: 30px;
